Fixed so that setWindowToOpenOnLoad works with HTML templates.